historical upload split out into each month's games

--- a/historical_ingest.ipynb
+++ b/historical_ingest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "59b7fad7",
+   "id": "1db8cb40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "974eb712",
+   "id": "924fbff2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82c2dd3",
+   "id": "5663b26d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,29 +51,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "87a99193",
+   "execution_count": 13,
+   "id": "e0db2fde",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_big = pl.from_pandas(pd.concat(frames_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cdf6e359",
+   "execution_count": 24,
+   "id": "72044f28",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "unique_months = df_big['game_date'].dt.month().unique()\n",
+    "month_dict = {k: df_big.filter(\n",
+    "    pl.col('game_date').dt.month() == k) for k in unique_months}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeb26f90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Put each month's data into s3"
+   ]
   }
  ],
  "metadata": {
