historical upload done and started helper functions

--- a/historical_ingest.ipynb
+++ b/historical_ingest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "id": "1db8cb40",
    "metadata": {},
    "outputs": [],
@@ -10,8 +10,10 @@
     "import pybaseball\n",
     "import polars as pl\n",
     "import boto3\n",
+    "import s3fs\n",
     "import datetime as dt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import api_handler"
    ]
   },
   {
@@ -31,7 +33,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5663b26d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "dates = pl.DataFrame({'start_date': pl.date_range(dt.date(2024, 2, 15),\n",
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "e0db2fde",
    "metadata": {},
    "outputs": [],
@@ -61,25 +65,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "72044f28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_months = df_big['game_date'].dt.month().unique()\n",
+    "unique_months = df_big['game_date'].dt.strftime('%B').unique()\n",
     "month_dict = {k: df_big.filter(\n",
-    "    pl.col('game_date').dt.month() == k) for k in unique_months}"
+    "    pl.col('game_date').dt.strftime('%B') == k) for k in unique_months}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bc2ccbbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_9422/2235613981.py:9: UserWarning: Polars found a filename. Ensure you pass a path to the file instead of a python file object when possible for best performance.\n",
+      "  df_current.write_parquet(output)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done with August\n",
+      "Done with July\n",
+      "Done with March\n",
+      "Skipping over September\n",
+      "Done with May\n",
+      "Done with April\n",
+      "Done with June\n"
+     ]
+    }
+   ],
+   "source": [
+    "fs = s3fs.S3FileSystem()\n",
+    "for key in month_dict:\n",
+    "    if key == 'September':\n",
+    "        print('Skipping over September')\n",
+    "        continue\n",
+    "    df_current = month_dict[key]\n",
+    "    destination = f's3://gthomakos14-statcast/2024/{key}.parquet'\n",
+    "    with fs.open(destination, mode='wb') as output:\n",
+    "        df_current.write_parquet(output)\n",
+    "    print(f'Done with {key}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "64345b87",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "polars.dataframe.frame.DataFrame"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df_big)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb26f90",
+   "id": "fcbd22a3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO: Put each month's data into s3"
-   ]
+   "source": []
   }
  ],
  "metadata": {
